ChangeArgumentParser: Replace FluentIterable with Java 8 stream
Change-Id: I34dbf535241a604089ddb5d3af570c4b97c5cc2e